--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -368,6 +368,7 @@ In particular, the Feather compiler must be able to execute arbitrary expression
 \part{Feather Language Specification}
 
 \chapter{Types and values}
+\label{ch:types_and_values}
 
 \iffalse{}\section{Objectives}
 
@@ -490,6 +491,12 @@ Since there is no dependence between \( A \) and the other types, we should be a
 
 \section{Abstract computation}
 
+\subsection{Computability}
+
+In this section discussing the process of abstract computation in a mathematical world, we do not consider the concept of a computable function.
+Although functions and syntactic expressions will be created, composed, and used in other ways, we will not concern ourselves here with the mechanics of computing a value from such an expression.
+That will be covered in \cref{ch:value_inference}.
+
 \subsection{Objects and variables}
 
 Feather expressions are evaluated on a computer with physical hardware, not in a hypothetical mathematical landscape with infinite processing power.
@@ -544,14 +551,18 @@ Types, when used as values, follow the same ownership rules as values.
 
   We may also write statements of the form \( \Gamma \vdash x \mapsto y : A \).
   These are \textit{one-directional} computations of \( x \) into \( y \).
-  This symbolises a lossy conversion of \( x \) into \( y \) that cannot necessarily be trivially reversed.
+  This symbolises a conversion of \( x \) into \( y \) that emphasises a particular direction of conversion.
+  When one direction of computation is emphasised in this way, it is also called a \textit{simplification} of \( x \) into \( y \).
+  Any simplification may be reversed, but semantically we should think of a simplified expression as `simpler' in some way than the unsimplified expression, so typically the transition should only occur in the forward direction.
+
+  Abstractly, \( x \) and \( y \) refer to the same underlying mathematical object, but its realisation has changed.
+  The physical machine is now closer to knowing `true value' of the object, in some sense.
+  This notion of values of an object will be explored in \cref{ch:value_inference}.
 \end{defn}
 
 \subsection{Ownership}
 \begin{defn}
-  A one-directional computation of \( a \) into \( b \) \textit{respects ownership} if all free variables that appear in \( x \) appear no more than once in \( y \).
-  A computation of \( a \) into \( b \) \textit{respects ownership} if both one-directional computations respect ownership.
-  Equivalently, it respects ownership if all free variables that appear in \( x \) appear exactly once in \( y \), and vice versa.
+  A computation of \( a \) into \( b \) \textit{respects ownership} if all free variables that appear in \( x \) appear exactly once in \( y \), and vice versa.
 \end{defn}
 \begin{eg}
   Consider \( \jdeqtp\Gamma{(\lam{x:A} (x.b))(a)}{a.b}{B} \).
@@ -713,8 +724,7 @@ This rule respects lifetimes vacuously, since there is no judgment or judgmental
 
 \subsection{Computation rules}
 
-% TODO: this is a pretty bad description of computation rules, also we need to change \equiv into \mapsto in all the rules below
-%Judgmental equality is an equivalence relation, respected by typing.
+We can simplify expressions, and the resulting value keeps the same type as the original expression.
 \begin{mathparpagebreakable}
 \inferrule*[right=\(\mapsto\)-\textsc{refl}]{\oftp\Gamma{a}{A}}{\Gamma\vdash a \mapsto a : A}
 \and
@@ -1081,28 +1091,12 @@ In this section, we discuss the primitive operations that can be performed on ob
 
 \subsection{Recursors}
 
-Currently, the induction principle is not a function but an atomic syntactic expression.
-For instance, we cannot \textit{a priori} write \( \ind{A \times B} \), we must instead write \( \ind{A \times B}(C,g,x) \) for some values \( C, g, x \) of appropriate types.
-\begin{lem}
-  The induction principle for product types can be converted into a function.
-  \[
-    \ind{\bigtimes_{j=1}^n A_j} : \prd{C:\bigtimes_{j=1}^n A_j \to \UU} \qty(\prd{x_1:A_1} \cdots \prd{x_n:A_n} C((x_1, \dots, x_n))) \to \prd{x:\bigtimes_{j=1}^n A_j} C(x)
-  \]
-\end{lem}
-\begin{proof}
-  Consider the expression
-  \begin{align*}
-    \ind{\bigtimes_{j=1}^n A_j}' \defeq &\ \Lambda\qty(C:\bigtimes_{j=1}^n A_j \to \UU).\,\lambda\qty(g:\prd{x_1:A_1} \cdots \prd{x_n:A_n} C((x_1, \dots, x_n))).\\
-    &\Lambda\qty(x:\bigtimes_{j=1}^n A_j).\,\ind{\bigtimes_{j=1}^n A_j}(C,g,x)
-  \end{align*}
-  From now, we may write \( \ind{\bigtimes_{j=1}^n A_j} \) to refer to this new \( \ind{\bigtimes_{j=1}^n A_j}' \).
-  Whether we are using the induction principle as a function or as an atomic syntactic element should be made clear from context.
-\end{proof}
-In a similar way, we may generalise the creation of the induction function to all predefined types with an induction principle.
-The induction function does not necessarily respect ownership in the same way that the atomic induction principle does.
+Note that the induction principle is not a function but an atomic syntactic expression.
+If we were to create an induction function, it would not necessarily respect ownership in the same way that the atomic induction principle does.
 For example, the induction principle for the boolean type uses functions \( c_\bot \) and \( c_\top \), but only one of those functions is ever evaluated in the induction principle.
 When viewed as a function, however, we may partially apply \( \ind{\mathbb B} \) to \( c_\bot \) and \( c_\top \).
 The conclusion of this constructor will contain both \( c_\bot \) and \( c_\top \) in its conclusion, so ownership is not respected.
+% TODO: continue here, converting functions into atomic principles
 \begin{defn}
   The \textit{recursor} for the product type is
   \begin{align*}
@@ -1271,6 +1265,12 @@ It is then trivial to prove the following lemma.
 
 \section{Expression syntax}
 
+\subsection{Context-free semantics}
+
+Expressions in Feather are context-free, in the sense that an arbitrary expression may be bound to an arbitrary name or instanced inline with no change in program semantics.
+This assertion assumes that names have been resolved (for instance, by the Quill language frontend).
+In particular, we may apply rules from the lambda calculus, which will be codified in the form of computation rules, to simplify terms.
+
 \subsection{Identifiers}
 
 The following schemas specify identifiers and related types.
@@ -1354,7 +1354,7 @@ The expressions may have additional information attached to them, denoting the l
 
 There are many types of expression in Feather, which are the variants of the \lstinline{ExprContents} type.
 Each will be discussed in this section.
-When describing schemas, we will use syntax such as \( x:A \)\lstinline{\ T}.
+When describing schemas, we will use syntax such as \( x:A \)\lstinline! T!.
 This represents a Feather expression or value \( x \) of type \( A \), with S-expression type \lstinline{T}.
 If a given value is not a Feather expression or value, we might instead simply write \( x:\ \)\lstinline{T} to denote that \( x \) has S-expression type \lstinline{T}.
 
@@ -1416,7 +1416,7 @@ Here, \( x \) is bound in \( z \), but this is only possible if the inner \( \la
 By default, \( \lambda \) abstractions may capture outer variables, but they will later be converted into functions that do not capture outer variables.
 
 \begin{lstlisting}[mathescape=true]
-(app $e:A \to B$ Expr $x:A$ DeBruijnIndex)$ \;\longleftrightarrow\; e\ x:B $
+(ap $e:A \to B$ Expr $x:A$ DeBruijnIndex)$ \;\longleftrightarrow\; e\ x:B $
 \end{lstlisting}
 
 We can apply parameters to functions, provided that the parameter is bound in a local.
@@ -1444,6 +1444,7 @@ The word `rune', referring to the type \( \mathbb U \), is intended to distingui
 \end{lstlisting}
 We can also use the recursor for the boolean type to construct an `if-else' expression.
 Note the change in argument order from a typical `if-else' expression.
+% TODO: use the induction principle, also remove the whole lemma about turning ind into a function
 \begin{lstlisting}[mathescape=true]
 (if $f: \unit \to C$ Expr $t: \unit \to C$ Expr $b: \mathbb B$ Expr)$ \;\longleftrightarrow\; \ind{\mathbb B}(C,f,t,b): C $
 \end{lstlisting}
@@ -1489,6 +1490,8 @@ Finally, we define
     $\longleftrightarrow\; \rec{\bigplus_{j=1}^n A_j}(C,g,p): C $
 \end{lstlisting}
 Similarly to with the dependent pair type, the type annotation for \lstinline{icoprod} is used to determine the possible variants for the coproduct.
+Note that we can create recursive definitions here by, for example, encasing an \lstinline{fcoprod} inside a newtype, binding it to a name, and then using an \lstinline{inst} to instance that name inside its own definition.
+This is the same procedure as is used in making recursive function definitions.
 
 \subsection{Newtypes}
 Newtypes have their own information type.
@@ -1498,6 +1501,7 @@ Newtypes have their own information type.
 \end{tabular}
 
 We can construct newtypes using the following expressions.
+% TODO: regularity requirements on the qualified names that fnewty can use, as well as making sure that only one newtype uses a given name in a whole project
 
 \begin{lstlisting}[mathescape=true]
 (fnewtyqn NewtypeInfo* $A:\mathcal A$ Expr $s:\ $QualifiedName)$ \;\longleftrightarrow\; \mathcal N(I_{\textnormal{\textsc{qn}}}(s), A): \UU $
@@ -1555,7 +1559,7 @@ For the purposes of this example, assume the existence of a function \lstinline{
 \begin{lstlisting}
 (module (doc "Provides a function to compute the sum of two integers.")
     (def (vis pub) (doc "Computes the sum of two integers.") sum
-        (lambda (lambda (ap (ap (new core i64 add) 0) 1)))
+        (lambda (lambda (ap (ap (inst (core i64 add)) 0) 1)))
     )
 )
 \end{lstlisting}
@@ -1566,6 +1570,53 @@ If this module were saved in the directory \lstinline{foo} with file name \lstin
     (module (foo bar))
 )
 \end{lstlisting}
+
+\chapter{Value inference}
+\label{ch:value_inference}
+
+\section{Introduction}
+
+\subsection{The value inference engine}
+
+A Feather program, when initially written, will not necessarily specify all types of all sub-expressions.
+It is the role of the \textit{type checker} to infer the types variables, when explicit declarations are absent.
+In particular, given an expression, the type checker must deduce the types of expressions that do not have type annotations, given that the given annotations are logically consistent, and verify that the deduced types are well-typed with respect to the given types.
+
+Due to the identification of types with values, the type checker is simply one facet of a more general \textit{value inference engine}, which determines the values of objects in Feather programs through direct computation as well as indirect means.
+\begin{defn}
+  An expression \( e \) is \textit{well-typed} if:
+  \begin{enumerate}
+    \item its sub-expressions are well-typed;
+    \item there exists an inference rule from \cref{ch:types_and_values} that constructs \( e \) in a type \( A \), given that the sub-expressions and bound variables have already been constructed;
+    \item the type deduced is unique; that is, if two types \( A \) and \( B \) are deduced for \( e \), we have \( A \equiv B \colon \UU \).
+  \end{enumerate}
+  If \( e \) is well-typed, we can refer to \textit{the type} of \( e \), since it is known to be unique.
+\end{defn}
+In most programming languages, the phrase `constructs \( e \) in a type \( A \)' would be written `infers that \( e \) has type \( A \)'; here, we make the distinction that the expression \( e \) constructs an object, which has ownership properties that must be tracked.
+
+Note that an expression may be well-typed, yet it (or its constructor) may \textit{not respect ownership, borrowing or lifetimes}.
+The verification that the inference rules respect these constraints is to be carried out by later phases in the compiler, which will be detailed in subsequent sections.
+
+\subsection{Partial values}
+The process of deducing the types of expressions does not happen instantaneously; a network of information is gradually built by the compiler, and is improved incrementally until expressions are deduced to be either well-typed or not well-typed.
+When evaluating types in many programming languages, it is useful to consider type variables, which are placeholders for types that are to be evaluated later.
+We extend this notion to arbitrary expressions.
+\begin{defn}
+  A \textit{value} is a realisation of an object which cannot be simplified, where bidirectional computation rules are not considered simplifications.
+\end{defn}
+
+\subsection{Existence of inference rules}
+Each expression in Feather is defined to map onto a semantically equivalent mathematical expression, with the sole exception of \lstinline{inst}.
+Thus, we can see that every non-\lstinline{inst} Feather expression has a unique inference rule that determines its type, given the types of sub-expressions and bound variables.
+We therefore will begin our description of value inference on a restricted subset of Feather expressions that may not include the \lstinline{inst} keyword.
+Later, we expand the scope of inference to include knowledge gained only through use of \lstinline{inst}.
+
+% TODO: \chapter{Ownership and borrowing}
+
+% TODO: \chapter{Default values}
+% this chapter contains information about how specialisation works and how the Feather compiler should be able to tell what implementation of a "trait" you want
+
+\iffalse{}
 
 \begin{appendices}
     \appendixpage
@@ -1579,6 +1630,8 @@ If this module were saved in the directory \lstinline{foo} with file name \lstin
 
     \input{hott_rules.tex}
 \end{appendices}
+
+\fi{}
 
 \backmatter
 
